--- a/client/src/app/components/flags/flag-popover/flag-popover.component.html
+++ b/client/src/app/components/flags/flag-popover/flag-popover.component.html
@@ -61,7 +61,7 @@
             ></cvc-user-tag>
           </nz-descriptions-item>
           <nz-descriptions-item nzTitle="Flagging Date">
-            {{ f.createdAt | timeago }}
+            {{ f.createdAt | timeAgo }}
           </nz-descriptions-item>
         </nz-descriptions>
 
