--- a/client/src/app/components/organizations/organizations-table/organizations-table.component.html
+++ b/client/src/app/components/organizations/organizations-table/organizations-table.component.html
@@ -93,7 +93,7 @@
             {{ organization.eventCount | number }}
           </td>
           <td nzRight nzAlign="right">
-            {{ organization.mostRecentEvent?.createdAt | timeago }}
+            {{ organization.mostRecentEvent?.createdAt | timeAgo }}
           </td>
         </tr>
       </ng-template>
