--- a/client/src/app/components/revisions/revision-popover/revision-popover.component.html
+++ b/client/src/app/components/revisions/revision-popover/revision-popover.component.html
@@ -61,7 +61,7 @@
           {{ r.linkoutData.name }}
         </nz-descriptions-item>
         <nz-descriptions-item nzTitle="Revision Date">
-          {{ r.createdAt | timeago }}
+          {{ r.createdAt | timeAgo }}
         </nz-descriptions-item>
       </nz-descriptions>
     </nz-card>
