--- a/client/src/app/components/assertions/assertions-popover/assertion-popover.component.html
+++ b/client/src/app/components/assertions/assertions-popover/assertion-popover.component.html
@@ -136,7 +136,7 @@
             ></i>
             <ng-container *ngIf="assertion.regulatoryApprovalLastUpdated">
               (last updated
-              {{ assertion.regulatoryApprovalLastUpdated | timeago }})
+              {{ assertion.regulatoryApprovalLastUpdated | timeAgo }})
             </ng-container>
           </nz-descriptions-item>
 
@@ -157,7 +157,7 @@
             ></i>
             <ng-container *ngIf="assertion.fdaCompanionTestLastUpdated">
               (last updated
-              {{ assertion.fdaCompanionTestLastUpdated | timeago }})
+              {{ assertion.fdaCompanionTestLastUpdated | timeAgo }})
             </ng-container>
           </nz-descriptions-item>
 
