--- a/client/src/app/components/events/event-timeline-item/event-timeline-item.component.html
+++ b/client/src/app/components/events/event-timeline-item/event-timeline-item.component.html
@@ -105,7 +105,7 @@
       nzTooltipPlacement="top"
       [nzTooltipTitle]="event.createdAt | date"
     >
-      {{ event.createdAt | timeago }}
+      {{ event.createdAt | timeAgo }}
     </span>
   </nz-col>
 </nz-row>
