use types in stats picker

--- a/client/src/app/components/shared/site-stats-card/site-stats-card.component.html
+++ b/client/src/app/components/shared/site-stats-card/site-stats-card.component.html
@@ -10,22 +10,22 @@
       nzSize="small">
       <label
         nz-radio-button
-        nzValue="Total"
+        nzValue="allTime"
         >Total</label
       >
       <label
         nz-radio-button
-        nzValue="Weekly"
+        nzValue="newThisWeek"
         >Weekly</label
       >
       <label
         nz-radio-button
-        nzValue="Monthly"
+        nzValue="newThisMonth"
         >Monthly</label
       >
       <label
         nz-radio-button
-        nzValue="Yearly"
+        nzValue="newThisYear"
         >Yearly</label
       >
     </nz-radio-group>
@@ -34,14 +34,11 @@
     <nz-row nzGutter="8">
       <nz-col nzFlex="1">
         <a routerLink="/assertions">
-          <!-- NOTE: #UPDATE value passed to nzValue in nz-statistic elements
-               raises the following error: Element implicitly has an 'any' type
-               because expression of type 'string' can't be used to index type 'TimePointCounts'. -->
-          <!-- <nz-statistic
-                    [nzTitle]="statsType + ' Assertions'"
-                    [nzValue]="(stats.assertions[statsTypes[statsType]] | number)!"
+          <nz-statistic
+                    [nzTitle]="label() + ' Assertions'"
+                    [nzValue]="(stats.assertions[statsType] | number)!"
                     [nzPrefix]="assertionIcon"
-                  ></nz-statistic> -->
+                  ></nz-statistic>
           <ng-template #assertionIcon>
             <i
               nz-icon
@@ -53,10 +50,10 @@
       </nz-col>
       <nz-col nzFlex="1">
         <a routerLink="/evidence">
-          <!-- <nz-statistic
-                    [nzTitle]="statsType + ' Evidence'"
-                    [nzValue]="(stats.evidenceItems[statsTypes[statsType]] | number)!"
-                    [nzPrefix]="evidenceIcon"></nz-statistic> -->
+          <nz-statistic
+                    [nzTitle]="label() + ' Evidence'"
+                    [nzValue]="(stats.evidenceItems[statsType] | number)!"
+                    [nzPrefix]="evidenceIcon"></nz-statistic>
           <ng-template #evidenceIcon>
             <i
               nz-icon
@@ -68,10 +65,10 @@
       </nz-col>
       <nz-col nzFlex="1">
         <a routerLink="/genes">
-          <!-- <nz-statistic
-                    [nzTitle]="statsType + ' Genes'"
-                    [nzValue]="(stats.genes[statsTypes[statsType]] | number)!"
-                    [nzPrefix]="geneIcon"></nz-statistic> -->
+          <nz-statistic
+                    [nzTitle]="label() + ' Genes'"
+                    [nzValue]="(stats.genes[statsType] | number)!"
+                    [nzPrefix]="geneIcon"></nz-statistic>
           <ng-template #geneIcon>
             <i
               nz-icon
@@ -83,10 +80,10 @@
       </nz-col>
       <nz-col nzFlex="1">
         <a routerLink="/variants">
-          <!-- <nz-statistic
-                    [nzTitle]="statsType + ' Variants'"
-                    [nzValue]="(stats.variants[statsTypes[statsType]] | number)!"
-                    [nzPrefix]="variantIcon"></nz-statistic> -->
+        <nz-statistic
+              [nzTitle]="label() + ' Variants'"
+              [nzValue]="(stats.variants[statsType] | number)!"
+              [nzPrefix]="variantIcon"></nz-statistic>
           <ng-template #variantIcon>
             <i
               nz-icon
@@ -98,12 +95,10 @@
       </nz-col>
       <nz-col nzFlex="1">
         <a routerLink="/molecular-profiles">
-          <!-- <nz-statistic
-                    [nzTitle]="statsType + ' Molecular Profiles'"
-                    [nzValue]="
-                      (stats.molecularProfiles[statsTypes[statsType]] | number)!
-                    "
-                    [nzPrefix]="mpIcon"></nz-statistic> -->
+          <nz-statistic
+                    [nzTitle]="label() + ' Molecular Profiles'"
+                    [nzValue]="(stats.molecularProfiles[statsType] | number)!"
+                    [nzPrefix]="mpIcon"></nz-statistic> 
           <ng-template #mpIcon>
             <i
               nz-icon
@@ -117,10 +112,10 @@
     <nz-row nzGutter="8">
       <nz-col nzFlex="1">
         <a routerLink="/diseases">
-          <!-- <nz-statistic
-                    [nzTitle]="statsType + ' Diseases'"
-                    [nzValue]="(stats.diseases[statsTypes[statsType]] | number)!"
-                    [nzPrefix]="diseaseIcon"></nz-statistic> -->
+          <nz-statistic
+              [nzTitle]="label() + ' Diseases'"
+              [nzValue]="(stats.diseases[statsType] | number)!"
+              [nzPrefix]="diseaseIcon"></nz-statistic>
           <ng-template #diseaseIcon>
             <i
               nz-icon
@@ -132,10 +127,10 @@
       </nz-col>
       <nz-col nzFlex="1">
         <a routerLink="/therapies">
-          <!-- <nz-statistic
-                    [nzTitle]="statsType + ' Therapies'"
-                    [nzValue]="(stats.therapies[statsTypes[statsType]] | number)!"
-                    [nzPrefix]="therapyIcon"></nz-statistic> -->
+          <nz-statistic
+              [nzTitle]="label() + ' Therapies'"
+              [nzValue]="(stats.therapies[statsType] | number)!"
+              [nzPrefix]="therapyIcon"></nz-statistic>
           <ng-template #therapyIcon>
             <i
               nz-icon
@@ -147,10 +142,10 @@
       </nz-col>
       <nz-col nzFlex="1">
         <a routerLink="/sources">
-          <!-- <nz-statistic
-                    [nzTitle]="statsType + ' Sources'"
-                    [nzValue]="(stats.sources[statsTypes[statsType]] | number)!"
-                    [nzPrefix]="sourceIcon"></nz-statistic> -->
+          <nz-statistic
+              [nzTitle]="label() + ' Sources'"
+              [nzValue]="(stats.sources[statsType] | number)!"
+              [nzPrefix]="sourceIcon"></nz-statistic>
           <ng-template #sourceIcon>
             <i
               nz-icon
@@ -161,10 +156,10 @@
         </a>
       </nz-col>
       <nz-col nzFlex="1">
-        <!-- <nz-statistic
-                  [nzTitle]="statsType + ' Revisions'"
-                  [nzValue]="(stats.revisions[statsTypes[statsType]] | number)!"
-                  [nzPrefix]="revisionsIcon"></nz-statistic> -->
+        <nz-statistic
+            [nzTitle]="label() + ' Revisions'"
+            [nzValue]="(stats.revisions[statsType] | number)!"
+            [nzPrefix]="revisionsIcon"></nz-statistic>
         <ng-template #revisionsIcon>
           <i
             nz-icon
@@ -175,10 +170,10 @@
       </nz-col>
       <nz-col nzFlex="1">
         <a routerLink="/users">
-          <!-- <nz-statistic
-                    [nzTitle]="statsType + ' Contributors'"
-                    [nzValue]="(stats.users[statsTypes[statsType]] | number)!"
-                    [nzPrefix]="userIcon"></nz-statistic> -->
+          <nz-statistic
+              [nzTitle]="label() + ' Contributors'"
+              [nzValue]="(stats.users[statsType] | number)!"
+              [nzPrefix]="userIcon"></nz-statistic>
           <ng-template #userIcon>
             <i
               nz-icon
@@ -194,54 +189,54 @@
     <nz-row nzGutter="8">
       <nz-col nzFlex="1">
         <nz-statistic
-          [nzTitle]="statsType + ' Assertions'"
+          [nzTitle]="label() + ' Assertions'"
           [nzValue]="'--'"></nz-statistic>
       </nz-col>
       <nz-col nzFlex="1">
         <nz-statistic
-          [nzTitle]="statsType + ' Evidence'"
+          [nzTitle]="label() + ' Evidence'"
           [nzValue]="'--'"></nz-statistic>
       </nz-col>
       <nz-col nzFlex="1">
         <nz-statistic
-          [nzTitle]="statsType + ' Genes'"
+          [nzTitle]="label() + ' Genes'"
           [nzValue]="'--'"></nz-statistic>
       </nz-col>
       <nz-col nzFlex="1">
         <nz-statistic
-          [nzTitle]="statsType + ' Variants'"
+          [nzTitle]="label() + ' Variants'"
           [nzValue]="'--'"></nz-statistic>
       </nz-col>
       <nz-col nzFlex="1">
         <nz-statistic
-          [nzTitle]="statsType + ' Molecular Profiles'"
+          [nzTitle]="label() + ' Molecular Profiles'"
           [nzValue]="'--'"></nz-statistic>
       </nz-col>
     </nz-row>
     <nz-row nzGutter="8">
       <nz-col nzFlex="1">
         <nz-statistic
-          [nzTitle]="statsType + ' Diseases'"
+          [nzTitle]="label() + ' Diseases'"
           [nzValue]="'--'"></nz-statistic>
       </nz-col>
       <nz-col nzFlex="1">
         <nz-statistic
-          [nzTitle]="statsType + ' Therapies'"
+          [nzTitle]="label() + ' Therapies'"
           [nzValue]="'--'"></nz-statistic>
       </nz-col>
       <nz-col nzFlex="1">
         <nz-statistic
-          [nzTitle]="statsType + ' Sources'"
+          [nzTitle]="label() + ' Sources'"
           [nzValue]="'--'"></nz-statistic>
       </nz-col>
       <nz-col nzFlex="1">
         <nz-statistic
-          [nzTitle]="statsType + ' Revisions'"
+          [nzTitle]="label() + ' Revisions'"
           [nzValue]="'--'"></nz-statistic>
       </nz-col>
       <nz-col nzFlex="1">
         <nz-statistic
-          [nzTitle]="statsType + ' Contributors'"
+          [nzTitle]="label() + ' Contributors'"
           [nzValue]="'--'"></nz-statistic>
       </nz-col>
     </nz-row>
