removed original forms imports, commented out non-refactored form components

--- a/client/src/app/components/comments/comment-list/comment-list.component.html
+++ b/client/src/app/components/comments/comment-list/comment-list.component.html
@@ -37,11 +37,12 @@
             </ng-template>
           </nz-list>
         </nz-card>
-        <cvc-comment-add-form
-          id="addComment"
-          [subject]="commentable"
-          (commentAddedEvent)="refreshList()"
-          *nzSpaceItem></cvc-comment-add-form>
+        <!-- TODO: #FORMS2 refactor comment-add-form -->
+        <!-- <cvc-comment-add-form
+                  id="addComment"
+                  [subject]="commentable"
+                  (commentAddedEvent)="refreshList()"
+                  *nzSpaceItem></cvc-comment-add-form> -->
       </nz-space>
     </nz-col>
     <nz-col nzSpan="6">
@@ -113,8 +114,9 @@
   </nz-row>
 </ng-container>
 <ng-template #noComments>
-  <cvc-comment-add-form
+  <!-- TODO: #FORMS2 refactor comment-add-form -->
+  <!-- <cvc-comment-add-form
     id="addComment"
     [subject]="commentable"
-    (commentAddedEvent)="refreshList()"></cvc-comment-add-form>
+    (commentAddedEvent)="refreshList()"></cvc-comment-add-form> -->
 </ng-template>
