--- a/client/src/app/views/sources/source-add/source-add.page.html
+++ b/client/src/app/views/sources/source-add/source-add.page.html
@@ -16,7 +16,8 @@
 
   <nz-page-header-content>
     <div class="content">
-      <cvc-source-submit-form></cvc-source-submit-form>
+      <!-- TODO: #FORMS2 refactor cvc-source-submit-form -->
+      <!-- <cvc-source-submit-form></cvc-source-submit-form> -->
     </div>
   </nz-page-header-content>
 </nz-page-header>
