--- a/client/src/app/views/variant-groups/variant-groups-add/variant-group-submit/variant-group-submit.page.html
+++ b/client/src/app/views/variant-groups/variant-groups-add/variant-group-submit/variant-group-submit.page.html
@@ -1,1 +1,2 @@
-<cvc-variant-group-submit-form></cvc-variant-group-submit-form>
+<!-- TODO: #FORMS2 refactor variant-group-submit-form -->
+<!-- <cvc-variant-group-submit-form></cvc-variant-group-submit-form> -->
