fixed components effected by drug -> therapy schema update

--- a/client/src/app/forms2/types/source-select/source-select.type.html
+++ b/client/src/app/forms2/types/source-select/source-select.type.html
@@ -85,8 +85,8 @@
      #addDrug
      let-searchStr
      let-createMsg>
-     <cvc-drug-quick-add-form
+     <cvc-therapy-quick-add-form
      [cvcSearchString]="searchStr"
      (cvcOnCreate)="onCreate$.next($event)">
-     </cvc-drug-quick-add-form>
+     </cvc-therapy-quick-add-form>
      </ng-template> -->
