--- a/client/src/themes/global-variables.less
+++ b/client/src/themes/global-variables.less
@@ -18,6 +18,7 @@
 
 // Status Colors
 @suggested-color: #fadb14;
+@error-color: #ff4d4f; // (red-5)
 
 // Layout
 @layout-body-background: #f0f2f5;
@@ -50,7 +51,7 @@
 @text-color-secondary-dark: fade(@white, 65%);
 // @text-selection-bg: @primary-color;
 @font-variant-base: tabular-nums;
-@font-feature-settings-base: "tnum";
+@font-feature-settings-base: 'tnum';
 @font-size-base: 14px;
 @font-size-lg: @font-size-base + 2px;
 @font-size-sm: 12px;
